# loki-mcp

./: .gitignore  Dockerfile  README.md  azure-pipelines.yml  pyproject.toml
.github/workflows/: docker-publish.yml
docs/: query-guide.md
src/loki_mcp/: .env.example  server.py
