[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loki-mcp"
version = "0.1.0"
description = "MCP server for querying Grafana Loki logs"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
loki-mcp = "loki_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/loki_mcp"]
